// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pageBreakBefore renders 0 1`] = `
Array [
  .c0 {
  page-break-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakBefore renders function 1`] = `
Array [
  .c0 {
  page-break-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: has;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: has;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakBefore renders invalid theme path 1`] = `
Array [
  .c0 {
  page-break-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakBefore renders negative number 1`] = `
Array [
  .c0 {
  page-break-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakBefore renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    page-break-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    page-break-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-before: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-before: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakBefore renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    page-break-before: July;
  }
}

@media April {
  .c0 {
    page-break-before: August;
  }
}

@media January {
  .c0 {
    page-break-before: September;
  }
}

@media April {
  .c0 {
    page-break-before: November;
  }
}

@media June {
  .c0 {
    page-break-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    page-break-before: July;
  }
}

@media April {
  .c0 {
    page-break-before: August;
  }
}

@media January {
  .c0 {
    page-break-before: September;
  }
}

@media April {
  .c0 {
    page-break-before: November;
  }
}

@media June {
  .c0 {
    page-break-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-break-before: January;
  }
}

@media April {
  .c0 {
    page-break-before: December;
  }
}

@media January {
  .c0 {
    page-break-before: April;
  }
}

@media April {
  .c0 {
    page-break-before: May;
  }
}

@media June {
  .c0 {
    page-break-before: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-break-before: January;
  }
}

@media April {
  .c0 {
    page-break-before: December;
  }
}

@media January {
  .c0 {
    page-break-before: April;
  }
}

@media April {
  .c0 {
    page-break-before: May;
  }
}

@media June {
  .c0 {
    page-break-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakBefore renders postitive number 1`] = `
Array [
  .c0 {
  page-break-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakBefore renders string 1`] = `
Array [
  .c0 {
  page-break-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: June;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: June;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakBefore renders valid theme path 1`] = `
Array [
  .c0 {
  page-break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
